HIVE-28755: new changes for both implementation and tests